k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: files-management
  labels:
    name: files-management
    app.kubernetes.io/name: files-management
    app.kubernetes.io/managed-by: kustomize
