k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: files-management-service
  namespace: files-management
  labels:
    app: files-management
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: files-management
